# podforge

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
src/personalized_podcast/: cli.py  main.py
src/personalized_podcast/application/ports/: audio_mixer.py  content_fetcher.py  delivery_channel.py  episode_store.py  script_writer.py  speech_synthesizer.py  summarizer.py
src/personalized_podcast/application/services/: pipeline.py
src/personalized_podcast/domain/entities/: article.py  episode.py  podcast.py
src/personalized_podcast/domain/value_objects/: destination_kind.py  episode_status.py  speech_provider.py
src/personalized_podcast/infrastructure/adapters/: elevenlabs_synthesizer.py  file_channel.py  json_episode_store.py  kokoro_synthesizer.py  litellm_script_writer.py  litellm_summarizer.py  pydub_mixer.py  rss_fetcher.py
src/personalized_podcast/infrastructure/config/: loader.py
src/podforge/: cli.py  main.py
src/podforge/application/ports/: content_fetcher.py  delivery_channel.py  episode_store.py  script_writer.py  speech_synthesizer.py  summarizer.py
src/podforge/application/services/: pipeline.py
src/podforge/domain/entities/: episode.py  podcast.py
src/podforge/infrastructure/: prompts.py
tests/fakes/: fake_audio_mixer.py  fake_content_fetcher.py  fake_delivery_channel.py  fake_episode_store.py  fake_script_writer.py  fake_speech_synthesizer.py  fake_summarizer.py
tests/unit/application/: test_pipeline.py
tests/unit/infrastructure/: test_config_loader.py  test_prompts.py  test_web_fetcher.py
(+12 files in other folders)
